--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -1,8 +1,8 @@
 batch_size: 128
-lr: 0.1
+lr: 0.001
 momentum: 0.9
 decay: 0.0005
-epochs: 302
+epochs: 310
 save_on_epochs: []
 optimizer: SGD
 
@@ -11,8 +11,10 @@ log_interval: 50
 data: image
 
 
-save_model: True
-scheduler: True
+save_model: False
+scheduler: False
 
+poisoning_proportion: 1
+backdoor: True
 
 log: False
