--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -2,7 +2,7 @@ batch_size: 128
 lr: 0.001
 momentum: 0.9
 decay: 0.0005
-epochs: 310
+epochs: 300
 save_on_epochs: []
 optimizer: SGD
 
@@ -15,6 +15,8 @@ save_model: False
 scheduler: False
 
 poisoning_proportion: 1
+poison_number: 8
 backdoor: True
 
 log: False
+tb: True
