--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -5,12 +5,12 @@ decay: 0.0005
 epochs: 350
 save_on_epochs: []
 optimizer: SGD
-log_interval: 10
+log_interval: 20
 
 save_model: False
 scheduler: False
 
-#resumed_model: model_image_Aug.15_11.40.44/model_last.pt.tar
+resumed_model: model_image_Aug.15_11.40.44/model_last.pt.tar
 
 
 data: cifar
