给每幅图像添加损失

--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -19,6 +19,9 @@ poisoning_proportion: 0.1
 poison_number: 8
 backdoor: True
 alpha: 0.95
+scale_threshold: 0.1
+
+normalize: loss
 
 log: False
 tb: False
