--- a/utils/params_full.yaml
+++ b/utils/params_full.yaml
@@ -6,16 +6,25 @@ epochs: 350
 save_on_epochs: []
 optimizer: SGD
 log_interval: 20
+
 save_model: True
 scheduler: True
-#resumed_model: model_image_Aug.15_11.40.44/model_last.pt.tar
+
+resumed_model: model_image_Dec.09_10.46.38/model_last.pt.tar
+
 
 data: cifar
+
 poisoning_proportion: 0.1
 poison_number: 8
 backdoor: True
 alpha: 0.95
-scale_threshold: 0.5
+scale_threshold: 0.1
+
+
+normalize: loss
+
 log: True
 tb: True
+
 random: False
