--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -10,7 +10,7 @@ log_interval: 20
 save_model: False
 scheduler: False
 
-resumed_model: model_image_Dec.09_10.46.38/model_last.pt.tar
+resumed_model: model_image_Aug.15_11.40.44/model_last.pt.tar
 
 
 data: cifar
@@ -27,6 +27,8 @@ log: False
 tb: False
 
 random: False
+
+
 losses:
   - backdoor
   - normal
