--- a/utils/params.yaml
+++ b/utils/params.yaml
@@ -11,7 +11,7 @@ log_interval: 10
 
 scheduler: True
 
-resumed_model: model_image_Aug.15_11.40.44/model_last.pt.tar
+resumed_model: model_image_Dec.09_10.46.38/model_last.pt.tar
 #resumed_model: model_image_Aug.31_17.16.10/model_last.pt.tar
 
 
